welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:15: error: not found: value cndition
		cndition = 1;
                ^